nginx.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: flinks
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: flinks
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: index-config
          mountPath: /usr/share/nginx/html
      volumes:
        - name: index-config
          configMap:
            name: index-config          
 
     
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: flinks
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
