ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: challenge-ingress
  namespace: flinks
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: challenge.domain.local
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: challenge-api-ingress
  namespace: flinks
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: challenge-api.domain.local
    http:
      paths:
      - path: /
        backend:
          serviceName: goapi-service
          servicePort: 80
